add hide class to result and style it to none

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <p class="title">Quiz Application</p>
                 <p class="subtitle">Test your knowledge about JS</p>
             </div>
-            <div class="result">
+            <div class="result hide">
                 <p>You scored tot!</p>
                 <p class="reload">
                     <button>Try Again?</button>
