--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <p class="subtitle">Test your knowledge about JS</p>
             </div>
             <div class="result hide">
-                <p>You scored tot!</p>
+                <p></p>
                 <p class="reload">
                     <button>Try Again?</button>
                 </p>
@@ -131,6 +131,8 @@
             </form>
         </section>
     </main>
+    
+    <script src="/assets/js/script.js"></script>
 
 </body>
 
