add inline onclick event for reload button

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <div class="result hide">
                 <p></p>
                 <p class="reload">
-                    <button>Try Again?</button>
+                    <button onclick="document.location.reload(true)">Try Again?</button>
                 </p>
             </div>
             <form class="quiz-form">
