edit subtitle content

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <section class="quiz">
             <div class="heading">
                 <p class="title">Quiz Application</p>
-                <p class="subtitle">Test your knowledge about JS</p>
+                <p class="subtitle">Test your JS knowledge</p>
             </div>
             <div class="result hide">
                 <p></p>
